fix: add the gap between cookie banner buttons

--- a/site/_scss/layouts/devsite-theme.scss
+++ b/site/_scss/layouts/devsite-theme.scss
@@ -875,7 +875,7 @@ $ROW_PADDING_MOBILE: 0 1.875rem;
   }
 }
 
-.cookie-banner__controls > button:last-child {
+.cookie-banner__controls > button {
   margin-left: 0;
   margin-right: 1rem;
 }
